--- a/src/app.html
+++ b/src/app.html
@@ -10,16 +10,34 @@
     destination for golf challenges! Discover "4 Winning", "Exact", and
     "Precision" - captivating golf experiences tested with trainers.'
     />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" href="%sveltekit.assets%/logo.PNG" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" href="%sveltekit.assets%/logo.PNG" />
 
-		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/manifest/apple-touch-icon.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/manifest/favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/manifest/favicon-16x16.png" />
-		<link rel="manifest" href="%sveltekit.assets%/manifest/site.webmanifest" />
-		<link rel="mask-icon" href="%sveltekit.assets%/manifest/safari-pinned-tab.svg" color="#039900" />
-		<meta name="msapplication-TileColor" content="#00a300" />
-		<meta name="theme-color" content="#ffffff" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%sveltekit.assets%/manifest/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%sveltekit.assets%/manifest/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%sveltekit.assets%/manifest/favicon-16x16.png"
+    />
+    <link rel="manifest" href="%sveltekit.assets%/manifest/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="%sveltekit.assets%/manifest/safari-pinned-tab.svg"
+      color="#039900"
+    />
+    <meta name="msapplication-TileColor" content="#00a300" />
+    <meta name="theme-color" content="#ffffff" />
 
     %sveltekit.head%
   </head>
